[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyeal"
version = "1.0.6"
description = "Python 打包编译工具"
readme = "README.md"
authors = [
    { name = "cpcgskill", email = "cpcgskill@outlook.com" }
]
license = { text = "Apache Software License (Apache 2.0)" }
requires-python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = [
    "astunparse==1.6.3",
    "argparse==1.4.0"
]

[project.urls]
Homepage = "https://github.com/cpcgskill/pyeal"
"Bug Tracker" = "https://github.com/cpcgskill/pyeal/issues"

[project.scripts]
pyeal = "pyeal.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
